--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.22.0",
     "@tailwindcss/vite": "^4.0.6",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
@@ -21,6 +22,7 @@
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
     "meta": "^2.2.25",
+    "openai": "^4.86.1",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
